Track asset ownership correctly
